export const testIDs = {
  CHARACTER_TITLE: 'CHARACTER_TITLE',
  CHARACTER_LIST: 'CHARACTER_LIST',
  CHARACTER_NAME: (characterID: string) => `CHARACTER_NAME${characterID}`,
  CHARACTER_ITEM: 'CHARACTER_ITEM',
  CHARACTER_IMAGE: 'CHARACTER_IMAGE',
  SEARCH_FIELD: 'SEARCH_FIELD',
  FAVOURITE_BUTTON: 'FAVOURITE_BUTTON',
};
