...
        </Text>
        <Text text40L center marginT-10>
          Actor: {character.portrayed}
        </Text>
        <View marginT-10>
          <Button
            label={isFavourite ? 'Remove from favourites' : 'Add to favourites'}
            onPress={onFavouritePressed}
            bg-dark70
            size={Button.sizes.large}
            labelStyle={styles.label}
            style={styles.button}
            testID={testIDs.FAVOURITE_BUTTON}
...
